# ATM

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  API.md  AUTHORS.rst  CLI.md  CONFIGURATION.md  CONFIGURING_ATM.md  CONTRIBUTING.rst  CUSTOM_USAGE.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  add_method.html  add_to_btb.html  api.html  auc.py  backtest.py  cli.html  configuration.html  contributing.html  custom_usage.html  database.html  dev-requirements.txt  enter_data.py  export-grid.py  fabfile.py  genindex.html  grid-test.py  history.html  index.html  install-prereqs.sh  introduction.html  modelhub-api-test.py  modelhub.html  msu-hpcc-start-atm-job.qsub  msu-hpcc-start-delphi-job.qsub  (+31 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_sources/: database.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
api/: atm.api.html  atm.api.preprocessors.html  atm.api.utils.html  atm.classifier.html  atm.cli.html  atm.compat.html  atm.config.html  atm.constants.html  atm.core.html  atm.data.html  atm.database.html  atm.encoder.html  atm.enter_data.html  atm.html  atm.method.html  atm.metrics.html  atm.models.html  atm.utilities.html  atm.worker.html  modules.html
atm/: .worker.py.swp  __init__.py  algorithm.py  api.py  classifier.py  cli.py  cloud.py  compat.py  config.py  constants.py  core.py  cpt.py  data.py  database.py  dataloader.py  datawrapper.py  encoder.py  enter_data.py  enumerator.py  launcher.py  loader.py  mapping.py  method.py  metrics.py  model.py  models.py  plot.py  predictor.py  run.py  utilities.py  worker.py  wrapper.py
btb/: __init__.py  cloud.py  config.py  cpt.py  database.py  datawrapper.py  enter_data.py  key.py  launcher.py  mapping.py  metrics.py  model.py  plot.py  predictor.py  run.py  utilities.py  worker.py  wrapper.py
classifiers/: bernoulli_naive_bayes.json  decision_tree.json  deep_belief_network.json  extra_trees.json  gaussian_naive_bayes.json  gaussian_process.json  gp.json  k_nearest_neighbors.json  logistic_regression.json  multi_layer_perceptron.json  multinomial_naive_bayes.json  passive_aggressive.json  random_forest.json  sgdc.json  stochastic_gradient_descent.json  support_vector_machine.json
(+399 files in other folders)
