[metadata]
description-file = README.md
[aliases]
test=pytest
[tool:pytest]
python_files = atm/tests/*

[flake8]
max-line-length = 99
exclude = docs, .git, __pycache__, .ipynb_checkpoints
# E402: module level import not at top of file
#   (standard_library.install_aliases)
# E501: line too long error
# E266: comment beginning with ## error
# F403 and F405: py2 'from module import *' error
# F999: py3 'from module import *' error
# ignore = E402,E501,E266,F403,F405,F999
ignore = E501,E266,F403,F405,F999

[isort]
include_trailing_comment = True
known_first_party = atm
line_length=79
lines_between_types = 0
# "hanging grid"
multi_line_output = 0
use_parentheses = True
