[metadata]
description-file = README.md
[aliases]
test=pytest
[tool:pytest]
python_files = atm/tests/*

[flake8]
max-line-length = 99
exclude = docs, .git, __pycache__, .ipynb_checkpoints
ignore =    # Keep empty to prevent default ignores

[isort]
include_trailing_comment = True
known_first_party = atm
known_third_party = sqlalchemy
line_length=79
lines_between_types = 0
multi_line_output = 0
use_parentheses = True
