[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:atm/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude = docs, .git, __pycache__, .ipynb_checkpoints
# E402: module level import not at top of file
#   (standard_library.install_aliases)
# E501: line too long error
# E266: comment beginning with ## error
# F403 and F405: py2 'from module import *' error
# F999: py3 'from module import *' error
ignore = E402,E501,E266,F403,F405,F999

[isort]
include_trailing_comment = True
line_length=99
lines_between_types = 0
# "hanging grid"
multi_line_output = 4
use_parentheses = True

[metadata]
description-file = README.md

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
python_files = atm/tests/*
